@@ -67,10 +67,10 @@ public class PGrid
 		int widthIn = perFile.getWidthIn();
 		int heightIn = perFile.getHeightIn();
 
-		cell.newVar("PLA_data_cols", new Integer(widthIn), ep);
-		cell.newVar("PLA_access_rows", new Integer(heightIn), ep);
-		cell.newVar("PLA_cols", new Integer(width), ep);
-		cell.newVar("PLA_rows", new Integer(height), ep);
+		cell.newVar("PLA_data_cols", Integer.valueOf(widthIn), ep);
+		cell.newVar("PLA_access_rows", Integer.valueOf(heightIn), ep);
+		cell.newVar("PLA_cols", Integer.valueOf(width), ep);
+		cell.newVar("PLA_rows", Integer.valueOf(height), ep);
 
 		// initialize the columns
 		if (pmosInitColumns(width, x, y, xOffset, cell)) return null;
@@ -164,7 +164,7 @@ public class PGrid
 			}
 			PortProto pp = pla.columnList[i].firstItem.nodeInst.getProto().getPort(0);
 			PortInst pi = pla.columnList[i].firstItem.nodeInst.findPortInstFromProto(pp);
-			Export.newInstance(arrayCell, pi, name, ep);
+			Export.newInst(arrayCell, pi, name, ep);
 		}
 		return false;
 	}
@@ -279,19 +279,19 @@ public class PGrid
 		// Now export port at the beginning and end of this half of row grouping
 		PortProto pp = pla.rowList[row][0].firstItem.nodeInst.getProto().getPort(0);
 		PortInst pi = pla.rowList[row][0].firstItem.nodeInst.findPortInstFromProto(pp);
-		Export.newInstance(arrayCell, pi, "ACCESS" + (row * 2) + ".m-1.w", ep);
+		Export.newInst(arrayCell, pi, "ACCESS" + (row * 2) + ".m-1.w", ep);
 
 		pp = pla.rowList[row][0].lastitem.nodeInst.getProto().getPort(0);
 		pi = pla.rowList[row][0].lastitem.nodeInst.findPortInstFromProto(pp);
-		Export.newInstance(arrayCell, pi, "ACCESS" + (row * 2) + ".m-1.e", ep);
+		Export.newInst(arrayCell, pi, "ACCESS" + (row * 2) + ".m-1.e", ep);
 
 		pp = pla.rowList[row][0].firstItem.nodeInst.getProto().getPort(0);
 		pi = pla.rowList[row][0].firstItem.nodeInst.findPortInstFromProto(pp);
-		Export.newInstance(arrayCell, pi, "ACCESS" + (row * 2) + ".p.w", ep);
+		Export.newInst(arrayCell, pi, "ACCESS" + (row * 2) + ".p.w", ep);
 
 		pp = pla.rowList[row][0].lastitem.nodeInst.getProto().getPort(0);
 		pi = pla.rowList[row][0].lastitem.nodeInst.findPortInstFromProto(pp);
-		Export.newInstance(arrayCell, pi, "ACCESS" + (row * 2) + ".p.e", ep);
+		Export.newInst(arrayCell, pi, "ACCESS" + (row * 2) + ".p.e", ep);
 
 		newItem = new PLA.UCItem();
 		newItem.nodeInst = pla.makePin(arrayCell, x, y-8, 6, pla.mpCon);
@@ -307,19 +307,19 @@ public class PGrid
 
 		pp = pla.rowList[row][2].firstItem.nodeInst.getProto().getPort(0);
 		pi = pla.rowList[row][2].firstItem.nodeInst.findPortInstFromProto(pp);
-		Export.newInstance(arrayCell, pi, "ACCESS" + (row * 2 + 1) + ".m-1.w", ep);
+		Export.newInst(arrayCell, pi, "ACCESS" + (row * 2 + 1) + ".m-1.w", ep);
 
 		pp = pla.rowList[row][2].lastitem.nodeInst.getProto().getPort(0);
 		pi = pla.rowList[row][2].lastitem.nodeInst.findPortInstFromProto(pp);
-		Export.newInstance(arrayCell, pi, "ACCESS" + (row * 2 + 1) + ".m-1.e", ep);
+		Export.newInst(arrayCell, pi, "ACCESS" + (row * 2 + 1) + ".m-1.e", ep);
 
 		pp = pla.rowList[row][2].firstItem.nodeInst.getProto().getPort(0);
 		pi = pla.rowList[row][2].firstItem.nodeInst.findPortInstFromProto(pp);
-		Export.newInstance(arrayCell, pi, "ACCESS" + (row * 2 + 1) + ".p1.w", ep);
+		Export.newInst(arrayCell, pi, "ACCESS" + (row * 2 + 1) + ".p1.w", ep);
 
 		pp = pla.rowList[row][2].lastitem.nodeInst.getProto().getPort(0);
 		pi = pla.rowList[row][2].lastitem.nodeInst.findPortInstFromProto(pp);
-		Export.newInstance(arrayCell, pi, "ACCESS" + (row * 2 + 1) + ".p.e", ep);
+		Export.newInst(arrayCell, pi, "ACCESS" + (row * 2 + 1) + ".p.e", ep);
 		return false;
 	}
 
@@ -361,7 +361,7 @@ public class PGrid
 			pla.columnList[i].lastitem = pla.columnList[i].lastitem.bottomItem;
 
 			PortInst pi = newItem.nodeInst.findPortInstFromProto(newItem.nodeInst.getProto().getPort(0));
-			Export.newInstance(arrayCell, pi, name, ep);
+			Export.newInst(arrayCell, pi, name, ep);
 		}
 		return false;
 	}
