@@ -75,7 +75,7 @@ public class Chromosome implements Comparable<Chromosome> {
 		GeneXPadding = new short[nbrOfGenes];
 		Index2GenePositionInChromosome = new int[nbrOfGenes];
 
-		fitness = new Double(Double.MAX_VALUE);
+		fitness = Double.valueOf(Double.MAX_VALUE);
 
 	}
 
